package Ejercicio3;

public class Inventario {
    private ProductoFisico[] ProductoFisico;
    private ProductoVirtual[] ProductoVirtual;
    
    public Inventario(){
    }
}
