@startuml

abstract class Producto{
    +id : int
    +nombre : String
    -stock: boolean
    -conteo_producto: int

    void get_stock()
    void set_stock()
    void set_conteo()
    void get_conteo()
}

class ProductoFisico{
    +peso : float
    +alto : float
    +ancho : float
    +largo : float
    +coste_transporte : float

}

class ProductoVirtual{
    +numero_licencia: String
}

class Usuario{
    +nombre: String
    +apellido: String
    +edad: int
    +direcciones: Direccion[]
    +direcciones_facturacion: Direccion[]
    #numero_tarjeta: int

    ' Getter
    void get_direccion()

    ' Setter
    void set_direccion()
}

class Direccion{
    +pais: String
    +municipio: String
    +departamento: String
    +direccion: String
    +observaciones: String
    +facturacion: boolean
    +correo_electronico: String
}

class Pedido{
    +direccion_entrega: Direccion
    +direccion_facturacion: Direccion
    +estado_pedido: String
}

class Inventario{
    +productos_fisicos[ProductoFisico]
    +productos_virtuales[ProductoVirtual]

    void agregar_stock()
    void quitar_stock(int id)

}

Producto <|-- ProductoFisico
Producto <|-- ProductoVirtual
Usuario o-- Direccion
Pedido *-- Direccion
Usuario o-- Pedido
Inventario "*..*" o-- ProductoFisico
Inventario "*..*" o-- ProductoVirtual
Pedido *-- Inventario
@enduml